--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,12 +26,19 @@ android {
 }
 
 dependencies {
+    def lifecycle_version = "2.2.0"
+    // ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    // LiveData
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.core:core-ktx:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
@@ -39,4 +46,17 @@ dependencies {
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
     implementation 'org.jsoup:jsoup:1.11.1'
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
+
+
+    //retrofit2
+    implementation 'com.squareup.retrofit2:retrofit:2.6.1'
+    //simplexml은 deprecated 되었지만 JXAB는 안드로이드를 지원하지않음 흠.
+    implementation 'com.squareup.retrofit2:converter-simplexml:2.6.1'
+    //코루틴
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core-common:1.0.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0"
+    //코루틴 - retrofit
+    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
+    implementation 'ru.gildor.coroutines:kotlin-coroutines-retrofit:0.13.0-eap13'
 }
